@@ -1,0 +1,96 @@
+<?php
+/***************************************************************
+*  Copyright notice
+*
+*  (c) 2008 Ingo Renner <ingo@typo3.org>
+*  All rights reserved
+*
+*  This script is part of the TYPO3 project. The TYPO3 project is
+*  free software; you can redistribute it and/or modify
+*  it under the terms of the GNU General Public License as published by
+*  the Free Software Foundation; either version 2 of the License, or
+*  (at your option) any later version.
+*
+*  The GNU General Public License can be found at
+*  http://www.gnu.org/copyleft/gpl.html.
+*
+*  This script is distributed in the hope that it will be useful,
+*  but WITHOUT ANY WARRANTY; without even the implied warranty of
+*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+*  GNU General Public License for more details.
+*
+*  This copyright notice MUST APPEAR in all copies of the script!
+***************************************************************/
+
+require_once($GLOBALS['PATH_community'] . 'view/userprofile/class.tx_community_view_userprofile_onlinefriends.php');
+
+/**
+ * A widget to display a user's online friends in a "who is online" style
+ *
+ * @package TYPO3
+ * @subpackage community
+ */
+class tx_community_controller_userprofile_OnlineFriendsWidget extends tx_community_controller_AbstractCommunityApplicationWidget {
+
+	/**
+	 * constructor for class tx_community_controller_userprofile_OnlineFriendsWidget
+	 */
+	public function __construct() {
+		parent::__construct();
+
+		$this->name     = 'onlineFriends';
+		$this->label    = 'onlineFriendsWidget';
+		$this->cssClass = '';
+	}
+
+	/**
+	 * default action for this widget, renders a list of online friends of the current user
+	 *
+	 *
+	 */
+	public function indexAction() {
+		$content = '';
+
+		if ($this->checkAccess()) {
+			$requestingUser = $this->communityApplication->getRequestingUser();
+			$widgetTypoScriptConfiguration = $this->communityApplication->getWidgetTypoScriptConfiguration($this->name);
+
+			$onlineFriends = $this->communityApplication->getUserGateway()->findOnlineFriends(
+				$requestingUser,
+				$widgetTypoScriptConfiguration['onlineTimeOut']
+			);
+
+			$view = t3lib_div::makeInstance('tx_community_view_userprofile_OnlineFriends');
+			$view->setTemplateFile($this->configuration['applications.']['userProfile.']['widgets.'][$this->name . '.']['templateFile']);
+			$view->setLanguageKey($this->communityApplication->LLkey);
+			$view->setUserModel($onlineFriends);
+
+			$content = $view->render();
+		}
+
+		return $content;
+	}
+
+	/**
+	 * checks whether the requesting user is allowed to access this widget
+	 *
+	 * @return	boolean	true if the requesting user has acces, false otherwise
+	 * @author	Ingo Renner <ingo@typo3.org>
+	 */
+	protected function checkAccess() {
+		$access = false;
+
+		if ($this->communityApplication->getRequestedUser() == $this->communityApplication->getRequestingUser()) {
+			$access = true;
+		}
+
+		return $access;
+	}
+}
+
+
+if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/community/controller/userprofile/class.tx_community_controller_userprofile_onlinefriendswidget.php'])	{
+	include_once($TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/community/controller/userprofile/class.tx_community_controller_userprofile_onlinefriendswidget.php']);
+}
+
+?>
