@@ -15,6 +15,7 @@
 			<label index="userProfile_profileActions">Profile Actions</label>
 			<label index="userProfile_friendsBirthdayList">Friends Birthday List</label>
 			<label index="userProfile_myGroups">My Groups</label>
+			<label index="userProfile_onlineFriends">Online Friends</label>
 			<label index="groupProfile">Group Profile</label>
 			<label index="groupProfile_image">Image</label>
 			<label index="groupProfile_information">Information</label>
